kubernetes-ingrees/2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "2048-deployment"
spec:
  selector:
    matchLabels:
      app: "2048"
  replicas: 5
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: mak1806/custom-nginx:v2.0
        imagePullPolicy: Always
        name: "2048"
        ports:
        - containerPort: 80
