kubernetes-ingrees/2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/rewrite-target: /v2
  labels:
    app: 2048-ingress
spec:
  rules:
    - http:
        paths:
          - path: /v2
            backend:
              serviceName: "service-2048"
              servicePort: 80
